--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="icon" type="image/svg+xml" href="./src/assets/img/icons8-breaking-bad-48.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Breaking Bad Characters</title>
+  <title>Breaking Bad Api</title>
 </head>
 
 <body>
